Changelog for 1.30.0
Signed-off-by: Roland Grunberg <rgrunber@redhat.com>